added login and games pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,146 +1,1 @@
-<div id="section-main">
-  <div ng-controller="MenuCtrl" class="bar bar-dark bar-top">
-    <div class="pull-left">
-      <img class="cow-icon" alt="Happy Cow icon" src="images/happycow.png" />
-    </div>
-    <ul id="menu-right" class="list-inline pull-left">
-      <li>
-        <button id="menu-menu" class="btn btn-default">Menu</button>
-        <div id="menu-menu-content" class="hidden">
-          <div class="btn-group btn-group-vertical">
-            <button class="btn btn-primary btn-sm">Main Menu</button>
-            <button class="btn btn-default btn-sm">Log Out</button>
-          </div>
-        </div>
-      </li>
-      <li ng-controller="ScoreViewCtrl">
-        <button id="menu-score" class="btn btn-default">Score <span class="badge">6</span></button>
-        <div id="menu-score-content" class="hidden">
-            <ul class="list-group">
-              <li ng-repeat="game_user in game.game_users | orderBy:score" class="list-group-item">
-                <span class="label player-{{game_user.id}}">{{game_user.user.name}}</span>
-                <span class="badge">{{game_user.score}}</span>
-              </li>
-            </ul>
-        </div>
-      </li>
-    </ul>
-    <ul class="list-inline pull-right" style="margin-top: 5px;">
-      <li ng-controller="RoundViewCtrl">
-        <button id="menu-round" class="btn btn-default">
-          Round <span class="badge">3</span>
-        </button>
-        <div id="menu-round-content" class="hidden">
-          <ul class="list-group">
-            <li ng-repeat="round in game.rounds | orderBy:number" class="list-group-item">
-              {{round.number}}
-              <button ng-if="!roundIsActive(round)" class="btn btn-default btn-xs">Review</button>
-              <span ng-if="roundIsActive(round)" class="label label-success">current</span>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <div class="btn-group">
-          <a ng-click="changePhaseTemplate(1)" class="btn btn-{{game.round.current_phase == 1? 'info' : 'default'}}">Event</a>
-          <a ng-click="changePhaseTemplate(2)" class="btn btn-{{game.round.current_phase == 2? 'info' : 'default'}}">
-            Cards <span class="badge">4</span>
-          </a>
-          <a ng-click="changePhaseTemplate(3)" class="btn btn-{{game.round.current_phase == 3? 'info' : 'default'}}">Movement</a>
-          <a ng-click="changePhaseTemplate(4)" class="btn btn-{{game.round.current_phase == 4? 'info' : 'default'}}">Review</a>
-        </div>
-      </li>
-
-      <li ng-controller="PlayerViewCtrl">
-        <button id="menu-player" class="btn btn-default">
-          Player <span class="badge">me</span>
-        </button>
-        <div id="menu-player-content" class="hidden">
-          <ul class="list-group">
-            <li ng-repeat="game_user in game.game_users | orderBy:id" class="list-group-item">
-              <span class="label label-{{game_user.active ? 'success' : 'default'}} label-xs">
-                {{game_user.id}}
-              </span> - <span class="label player-{{game_user.id}}">{{game_user.user.name}}</span>
-            </li>
-          </ul>
-          In the next round Mary will start.
-        </div>
-      </li>
-    </ul><!--/.nav-collapse -->
-  </div>
-
-  <div ng-controller="PhaseCtrl" id="center-area">
-    <div ng-include="phaseTemplate"></div>
-  </div>
-
-</div><!-- /.end of section-main -->
-
-<div ng-controller="CowCtrl" id="section-info" class="container">
-  <h3>Cow Condition</h3>
-
-  <div ng-controller="CowStatsCtrl" class="container-fluid">
-    <div ng-repeat="stat in stats" class="row">
-      <div class="col-md-4">
-        <p>{{stat.name}} <span class="glyphicon glyphicon-info-sign clickable"></span></p>
-      </div>
-      <div class="col-md-8">
-        <span class="label label-{{stat.minType}} pull-left">{{stat.min}}</span>
-        <div class="progress pull-left" style="width: 70%">
-          <div class="progress-bar" role="progressbar"
-                aria-valuemin="{{stat.min}}" aria-valuemax="{{stat.max}}"
-                style="background-color: #{{stat.type()}};
-                width: {{((stat.value-stat.min)/(stat.max-stat.min)) * 100}}%;">
-                {{stat.value}}
-          </div>
-        </div>
-        <span class="label label-{{stat.maxType}} pull-left">{{stat.max}}</span>
-      </div>
-    </div>
-  </div>
-
-  <h5>Ingredients Values</h5>
-  <table ng-controller="IngredientValueCtrl" class="table table-condensed">
-    <thead>
-      <tr>
-        <th>Resource</th>
-        <th ng-repeat="ingredient in ingredients" class="{{ingredient.name|lowercase}}">{{ingredient.name}}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Milk</td>
-        <td ng-repeat="ingredient in ingredients" class="{{ingredient.name|lowercase}}">{{ingredient.milk}} pts</td>
-      </td>
-      <tr>
-        <td>Meat</td>
-        <td ng-repeat="ingredient in ingredients" class="{{ingredient.name|lowercase}}">{{ingredient.meat}} pts</td>
-      </td>
-      <tr>
-        <td>Muck</td>
-        <td ng-repeat="ingredient in ingredients" class="{{ingredient.name|lowercase}}">{{ingredient.muck}} pts</td>
-      </td>
-    </tbody>
-  </table>
-
-  <div ng-controller="CowEventsCtrl" class="panel panel-default">
-      <div class="panel-body">
-        <tabset justified="true">
-          <tab heading="Weather">
-            <h3>{{weather.title}}</h3>
-            <img class="image image-full" ng-src="images/{{weather.img}}">
-            <div ng-bind-html="weather.content"></div>
-          </tab>
-          <tab heading="Disease">
-            <h3>{{disease.title}}</h3>
-            <img class="image image-full" ng-src="images/{{disease.img}}">
-            <div ng-bind-html="disease.content"></div>
-          </tab>
-          <tab heading="Pregnancy">
-            <h3>{{pregnancy.title}}</h3>
-            <img class="image image-full" ng-src="images/{{pregnancy.img}}">
-            <div ng-bind-html="pregnancy.content"></div>
-          </tab>
-        </tabset>
-      </div>
-    </div>
-</div>
+<div ng-view></div>
