--- a/public/templates/phase/1.html
+++ b/public/templates/phase/1.html
@@ -5,12 +5,13 @@
         <img class="image image-full" ng-src="images/{{game.round.event.image}}" alt="Event Image">
       </div>
       <div class="col-md-8">
-        <h4 class="media-heading">{{game.round.event.title}} <span class="label label-default">{{game.round.event.type}}</span></h4>
+        <h4 class="media-heading">{{game.round.event.title}} <span class="label label-default">{{game.round.event.cateogry}}</span></h4>
         <div ng-bind-html="game.round.event.description"></div>
       </div>
     </div>
   </div>
-  <div ng-if="checkPhase(1)" class="bar bar-bottom bar-light">
-    <button class="btn btn-success pull-right" ng-click="nextPhase(2)">Ok, move to Cards Phase</button>
+  
+  <div ng-if="game.checkPhase(1)" class="bar bar-bottom bar-light">
+    <button class="btn btn-success pull-right" ng-click="game.nextPhase(2)">Ok, move to Cards Phase</button>
   </div>
 </div>
