--- a/public/templates/phase/3.html
+++ b/public/templates/phase/3.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div ng-if="checkPhase(3)" class="bar bar-bottom bar-light">
+  <div ng-if="game.checkPhase(3)" class="bar bar-bottom bar-light">
     <div class="area area-{{movePhase == 1 ? 'in' : 'out'}} pull-left">
       <div>
         <div ng-repeat="ration in rations | orderBy : order" class="ration {{!move.ration.id ? 'clickable' : ''} pull-left pad-10"
