--- a/public/templates/phase/4.html
+++ b/public/templates/phase/4.html
@@ -25,11 +25,11 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
-            <img class="image image-full" ng-src="images/{{round.event.image}}" alt="Event Image">
+            <img class="image image-full" ng-src="images/{{game.round.event.image}}" alt="Event Image">
           </div>
           <div class="col-md-8">
-            <h4 class="media-heading">{{round.event.title}} <span class="label label-default">{{round.event.type}}</span></h4>
-            <div ng-bind-html="round.event.description"></div>
+            <h4 class="media-heading">{{game.round.event.title}} <span class="label label-default">{{game.round.event.category}}</span></h4>
+            <div ng-bind-html="game.round.event.description"></div>
           </div>
         </div>
       </div>
