--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -2,6 +2,7 @@
   <div class="pull-left">
     <img class="cow-icon pull-left" alt="Happy Cow icon" src="images/happycow.png" />
     <h2 class="title pull-left">Login</h2>
+    {{debug()}}
   </div>
 
   <ul class="list-inline pull-right">
