--- a/app/assets/stylesheets/classes.css
+++ b/app/assets/stylesheets/classes.css
@@ -136,3 +136,11 @@
 .used, .fade {
   opacity: 0.2;
 }
+
+.colour-sample {
+  margin-left: 5px;
+  height: 34px;
+  width: 34px;
+  border: 2px solid #F5F5F5;
+  border-radius: 5px;
+}
