no authenticity tokens

--- a/public/templates/game_play.html
+++ b/public/templates/game_play.html
@@ -29,7 +29,7 @@
     <ul class="list-inline pull-right" style="margin-top: 5px;">
       <li ng-controller="RoundViewCtrl">
         <button popup class="btn btn-default">
-          Round <span class="badge">3</span>
+          Round <span class="badge">{{game.round.number}}</span>
         </button>
         <div class="hidden">
           <ul class="list-group">
